@@ -5,6 +5,7 @@
 require 5;
 package Pod::Simple::Checker;
 use strict;
+use warnings;
 use Carp ();
 use Pod::Simple::Methody ();
 use Pod::Simple ();
