@@ -6,6 +6,7 @@ use Pod::Simple ();
 BEGIN {@ISA = ('Pod::Simple')}
 
 use strict;
+use warnings;
 
 use Carp ();
 
