@@ -2,6 +2,7 @@
 require 5;
 package Pod::Simple::HTMLBatch;
 use strict;
+use warnings;
 use vars qw( $VERSION $HTML_RENDER_CLASS $HTML_EXTENSION
  $CSS $JAVASCRIPT $SLEEPY $SEARCH_CLASS @ISA
 );
