@@ -3,6 +3,7 @@ require 5;
 package Pod::Simple::Progress;
 $VERSION = '3.33';
 use strict;
+use warnings;
 
 # Objects of this class are used for noting progress of an
 #  operation every so often.  Messages delivered more often than that
