@@ -44,6 +44,7 @@ declare the output character set as UTF-8 before parsing, like so:
 
 package Pod::Simple::XHTML;
 use strict;
+use warnings;
 use vars qw( $VERSION @ISA $HAS_HTML_ENTITIES );
 $VERSION = '3.33';
 use Pod::Simple::Methody ();
